CSS tweaks to keep from boxes stretching on wide screens, and stop images going out of aspect ratio

--- a/src/components/filters/filter/styles.css
+++ b/src/components/filters/filter/styles.css
@@ -2,6 +2,7 @@
     font-size: 10pt;
     height: 60px;
     width: 100%;
+    max-width: 350px;
     padding: 0px 15px;
     border-bottom: 2px solid rgb(21, 46, 113);
     text-align: left;
