--- a/src/components/filters/styles.css
+++ b/src/components/filters/styles.css
@@ -3,4 +3,5 @@
     padding: 50px;
     display: grid;
     align-content: baseline;
+    justify-items: end;
 }
