--- a/src/components/hotelCard/styles.css
+++ b/src/components/hotelCard/styles.css
@@ -5,11 +5,13 @@
     display: flex;
     flex-wrap: wrap;
     position: relative;
+    max-width: 900px;
 }
 
 .hotel-card .hotel-image {
     width: 60%;
     height: 275px;
+    object-fit: cover;
 }
 
 .hotel-card .hotel-info {
